[package]
name = "awsl-ast"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "AWSL Window Structure Language"
repository = "https://github.com/GalAster/awsl-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
awsl-error = {version="1.0.0", path = "../awsl-error"}
url = "2.1"

[dev-dependencies]

[features]
default = []
