[package]
name = "awsl-ast"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "AWSL Window Structure Language"
repository = "https://github.com/GalAster/awsl-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
text-utils = "0.4.3"
url = "2.3.1"
yggdrasil-shared = "0.2.2"
pest_consume = "1.1.3"
indentation = "0.1.2"
serde = "1.0.148"
serde_derive = "1.0.148"
serde_repr = "0.1.9"

[dependencies.awsl-pest]
version = "0.1.*"
path = "../awsl-pest"

[dependencies.awsl-error]
version = "0.1.*"
path = "../awsl-error"

[dev-dependencies]

[features]
default = []
