[package]
name = "valkyrie-error"
version = "0.1.0"
authors = ["192608617@qq.com"]
edition = "2018"
description = "..."
repository = "https://github.com/nyar-lang/NyarNative"
license = "MPL-2.0"


[dependencies]
num = "0.4.0"
bigdecimal = "0.3.0"
bitflags = "1.3.2"
type-uuid = "0.1.2"

[dependencies.indexmap]
version = "1.8.0"
features = ["std", "serde", "rayon"]


[dev-dependencies]


[build-dependencies]
