[package]
name = "awsl-error"
version = "0.1.1"
authors = ["192608617@qq.com"]
edition = "2018"
description = "Awesome web simple language"
repository = "https://github.com/awsl-lang/awsl-rs"
license = "MPL-2.0"


[dependencies]
num = "0.4.0"
bigdecimal = "0.3.0"
bitflags = "1.3.2"
type-uuid = "0.1.2"
pest = "2.1.3"
yggdrasil-shared = "0.2.2"

[dependencies.indexmap]
version = "1.8.1"
features = ["std", "serde", "rayon"]


[package.metadata.wee]
u = "cargo upgrade"
p = "cargo publish --allow-dirty"
