[package]
name = "awsl-pest"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "AWSL Web Structure Language"
repository = "https://github.com/oovm/awsl-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
pest = "2.5.0"

[dev-dependencies]
pest_generator = "2.5.0"
quote = "1.0.21"

[package.metadata.wee]
u = "cargo upgrade"
p = "cargo publish --allow-dirty"
pest = "cargo test --test main gen_parser -- --ignored && wee fmt -t"
fmt = "cargo fmt"
