[package]
name = "awsl-hir"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "AWSL Window Structure Language"
repository = "https://github.com/GalAster/awsl-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
text-utils = "0.4.3"
url = "2.2.2"
yggdrasil-shared = "0.2.2"

[dependencies.awsl-error]
version = "0.1.0"
features = []
path = "../awsl-error"

[dev-dependencies]

[features]
default = []
